<resources>
    <string name="app_name">Android1_homeWork3</string>
    <string name="_0">0</string>
    <string name="num0">0</string>
    <string name="click_ac">AC</string>
    <string name="click_plus_equals">+/-</string>
    <string name="click_percent">%</string>
    <string name="click_divide">÷</string>
    <string name="click_seven">7</string>
    <string name="click_eight">8</string>
    <string name="click_nine">9</string>
    <string name="click_x">x</string>
    <string name="click_fore">4</string>
    <string name="click_five">5</string>
    <string name="click_six">6</string>
    <string name="click_dash">-</string>
    <string name="click_one">1</string>
    <string name="click_two">2</string>
    <string name="click_three">3</string>
    <string name="click_plus">+</string>
    <string name="click_equal">=</string>
    <string name="click_0">0</string>
    <string name="click_comma">,</string>
    <string name="click_equals">=</string>
    <string name="good">Правильно!</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="result">Result</string>
</resources>