<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/white_blue"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policies"
        android:textColor="@color/blue_dark"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"/>

    <Button
        android:id="@+id/btn_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_reg"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:text="@string/policy"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"
        android:gravity="start"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
        android:padding="16dp"/>
    <Button
        android:id="@+id/btn_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_reg"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_policy"
        android:text="@string/product_category"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="16dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"/>

    <Button
        android:id="@+id/btn_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_reg"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_category"
        android:text="@string/origin_country"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="16dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"/>
    <Button
        android:id="@+id/btn_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_reg"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_country"
        android:text="@string/brand"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"
        android:gravity="start"
        android:padding="16dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_right_24"/>


    <TextView
        android:id="@+id/tv_Current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/blue_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_brand"
        android:layout_marginTop="28dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_Current"
        android:background="@drawable/rad"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="22dp"
        android:text="@string/export_as_csv"
        android:textColor="@color/white"
        android:textSize="10sp"
        tools:ignore="SmallSp" />





</androidx.constraintlayout.widget.ConstraintLayout>